# nomad-parser-wannier90

./: .cruft.json  .gitignore  README.md  mkdocs.yml  nomad.yaml  pyproject.toml
.github/workflows/: actions.yaml
docs/: index.md
src/nomad_parser_wannier90/: __init__.py  __main__.py  band_parser.py  dos_parser.py  hr_parser.py  nomad_plugin.yaml  parser.py  win_parser.py
src/nomad_parser_wannier90/parsers/: __init__.py  dos_parser.py  hr_parser.py  parser.py  schema.py
tests/: test_parser.py
